@@ -1,3 +1,7 @@
+2005-01-03  Corinna Vinschen  <corinna@vinschen.de>
+
+	* syscalls.cc (setmode): Call _fwalk with _GLOBAL_REENT.
+
 2005-01-01  Christopher Faylor  <cgf@timesys.com>
 
 	* cygthread.cc (cygthread::stub): Set inuse to false when exiting.
